cambios de estilo

--- a/templates/cliente/lista.html
+++ b/templates/cliente/lista.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Lista de empleados</h1>
+<h1 class= "titulo_clientes">Lista de clientes</h1>
 
     <div class="lista_clientes">
         <h1><strong>Apellidos</strong></h1>
