--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,8 @@
     <title>Proyecto Django</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href={% static 'static/CSS/style.css' %}>
+    <link rel="stylesheet" href={% static 'css/style.css' %}>
 
-    <link rel="stylesheet" href= "static/CSS/style.css">
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 
