--- a/templates/cliente/buscar.html
+++ b/templates/cliente/buscar.html
@@ -1,8 +1,13 @@
 {% block content %}
 
     <form method = "GET">
-        
+        <input type="text" placeholder="Apellido" id="kword" name="kword">
+        <input type="submit" value="Buscar">
     </form>
 
+<ul>
+    {%for cliente in clientes%}
+        <li>{{cliente.apellido}}, {{cliente.nombre}}</li>
+    {% endfor %}
+</ul>
 {% endblock content %}
-
