--- a/templates/cliente/detalle.html
+++ b/templates/cliente/detalle.html
@@ -4,8 +4,9 @@
     <h1>Lista de empleados</h1>
 
     <ul>
-        {%for cliente in clientes%}
-            <li>{{cliente.apellido}},{{cliente.nombre}},{{cliente.dni}},{{cliente.telefono}}</li>
-        {% endfor %}
+        <li>Apellido: {{detalle.apellido}}</li>
+        <li>Nombre: {{detalle.nombre}}</li>
+        <li>Telefono: {{detalle.telefono}}</li>
+        <li>DNI: {{detalle.dni}}</li>
     </ul>
 {% endblock content %}
